--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- main start -->
     <main>
       <!-- page one start -->
-      <div class="page-one">
+      <div class="page-one row">
         <div class="col-12">
           <div id="carouselExampleAutoplaying" class="carousel slide H-100" data-bs-ride="carousel">
             <div class="carousel-inner" style="height: 100%;">
@@ -140,7 +140,7 @@
       <!-- page one end -->
 
       <!-- page two start -->
-      <div class="page-two">
+      <div class="page-two row">
         <div class="d-flex align-items-center flex-column">
           <div class="heading">
             <h2 class="p-4 text-center "><b>Featured Products</b></h2>
@@ -498,7 +498,7 @@
       <!-- page two end -->
 
       <!-- page three start -->
-      <div class="page-three">
+      <div class="page-three row">
         <div class="d-flex align-items-center flex-column">
           <div class="d-flex align-items-center">
             <div class="heading">
@@ -590,7 +590,7 @@
       <!-- page three end -->
 
       <!-- page four start -->
-      <div class="page-four">
+      <div class="page-four row">
         <div class="d-flex align-items-center flex-column">
           <div class="d-flex align-items-center">
             <div class="heading">
@@ -651,7 +651,7 @@
       <!-- page four end -->
 
       <!-- page five start -->
-      <div class="page-four">
+      <div class="page-four row">
         <div class="d-flex align-items-center flex-column">
           <div>
             <div class="heading">
@@ -795,7 +795,7 @@
           </li>
         </ul>
       </div>
-      br
+      <br>
         <div class="col-6 w-100 d-flex ">
           <ul title="Let's stay in touch ">
             <input type="email" placeholder="Enter email address">
@@ -805,8 +805,8 @@
         </div>
       </div>
 
-      <div class="text-secondary pt-2">
-        <p>Copyright 2010-2024 Xiaomi. All Rights Reserved</p>
+      <div class="text-secondary pt-2 border-top" style="font-size: 12px;">
+        <p style="text-align: center;">Copyright 2010-2024 Xiaomi. All Rights Reserved</p>
       </div>
     </footer>
 
