--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             <h2 class="p-4 text-center "><b>Featured Products</b></h2>
           </div>
           <div class="p-two-product-names d-flex">
-            <a href="#p-two-phone" ><h6>Phone</h6></a>
-            <a href="#p-two-prod-TV"><h6>Smart TV</h6></a>
-            <a href="#p-two-prod-tabs"><h6>Tablets</h6></a>
-            <a href="#p-two-prod-lifestyle"><h6>Lifestyle</h6></a>
+            <a href="#p-two-phone"  id="phone-header-text" onclick="activetab(id)"><h6>Phone</h6></a>
+            <a href="#p-two-prod-TV" id="tv-header-text" onclick="activetab(id)"><h6>Smart TV</h6></a>
+            <a href="#p-two-prod-tabs" id="tab-header-text" onclick="activetab(id)"><h6>Tablets</h6></a>
+            <a href="#p-two-prod-lifestyle" id="lifestyle-header-text" onclick="activetab(id)"><h6>Lifestyle</h6></a>
           </div>
           <div class="common-page-item-wrapper">
             <div class="common-page-products-container">
@@ -810,7 +810,7 @@
       </div>
     </footer>
 
-
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
